images/envoy/envoy.yaml
node:
  id: "frontend-service"
  cluster: "opa-workflow-cdk"
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          idle_timeout: 1s
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: app
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: app
          http_filters:
          - name: envoy.ext_authz
            config:
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: 127.0.0.1:9191
                  stat_prefix: ext_authz
                timeout: 0.5s
          - name: envoy.router

  clusters:
  - name: app
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
